# eong

./: .gitignore  .pre-commit-config.yaml  README.md  activity.py  config.json  config.py  covid.py  eyc.py  main.py  pyproject.toml  requirements.txt  symbol.json  tts.py  utils.py
.github/workflows/: codeql.yml
bots/: mainbot.py  musicbot.py
cogs/: activity.py  covid.py  music.py  tts.py
